feat: bump java version 17 -> 21