@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.12</version>
+		<version>3.4.5</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>it.pagopa.ecommerce</groupId>
@@ -14,12 +14,12 @@
 	<description>pagoPA ecommerce microservice to handle transaction events and perform async operations such as
 		send user email, refund based on transaction status</description>
 	<properties>
-		<java.version>17</java.version>
-		<kotlin.version>1.6.21</kotlin.version>
-		<kotlinx-coroutines.version>1.6.2</kotlinx-coroutines.version>
-		<spring-cloud-azure.version>4.0.0</spring-cloud-azure.version>
-		<jacoco.version>0.8.8</jacoco.version>
-		<pagopa-ecommerce-commons.version>1.37.2</pagopa-ecommerce-commons.version>
+		<java.version>21</java.version>
+		<kotlin.version>2.1.20</kotlin.version>
+		<kotlinx-coroutines.version>1.8.0</kotlinx-coroutines.version>
+		<spring-cloud-azure.version>5.18.0</spring-cloud-azure.version>
+		<jacoco.version>0.8.11</jacoco.version>
+		<pagopa-ecommerce-commons.version>2.1.0-SNAPSHOT</pagopa-ecommerce-commons.version>
 		<sonar.coverage.exclusions> <!-- the members of the following list should be in the same line -->
 			**/it/pagopa/transactions/**,
 			**/it/pagopa/ecommerce/eventdispatcher/validation/**
@@ -87,17 +87,17 @@
 		<dependency>
 			<groupId>com.azure.spring</groupId>
 			<artifactId>spring-cloud-azure-starter-integration-storage-queue</artifactId>
-			<version>4.3.0</version>
+			<!--<version>4.3.0</version>-->
 		</dependency>
 		<dependency>
 			<groupId>com.azure</groupId>
 			<artifactId>azure-storage-queue</artifactId>
-			<version>12.13.0</version>
+			<version>12.21.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-maven-lombok</artifactId>
-			<version>1.7.10</version>
+			<version>${kotlin.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.projectreactor</groupId>
@@ -112,12 +112,10 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.30</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.2.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
@@ -126,12 +124,13 @@
 		<dependency>
 			<groupId>org.mockito.kotlin</groupId>
 			<artifactId>mockito-kotlin</artifactId>
-			<version>4.0.0</version>
+			<version>5.2.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-inline</artifactId>
+			<version>5.2.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -157,12 +156,12 @@
 		<dependency>
 			<groupId>jakarta.xml.bind</groupId>
 			<artifactId>jakarta.xml.bind-api</artifactId>
-			<version>3.0.0</version>
+			<version>4.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
 			<artifactId>swagger-annotations</artifactId>
-			<version>2.2.19</version>
+			<version>2.2.30</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.findbugs</groupId>
@@ -232,6 +231,10 @@
 			<artifactId>opentelemetry-semconv</artifactId>
 			<version>1.27.0-alpha</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -257,9 +260,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<jvmArguments>--enable-preview</jvmArguments>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -346,7 +346,7 @@
 			<plugin>
 				<groupId>org.openapitools</groupId>
 				<artifactId>openapi-generator-maven-plugin</artifactId>
-				<version>7.1.0</version>
+				<version>7.13.0</version>
 				<executions>
 					<execution>
 						<id>node-api</id>
@@ -368,6 +368,8 @@
 							<modelNameSuffix>dto</modelNameSuffix>
 							<configOptions>
 								<interfaceOnly>true</interfaceOnly>
+								<useJakartaEe>true</useJakartaEe>
+								<useSpringBoot3>true</useSpringBoot3>
 							</configOptions>
 						</configuration>
 					</execution>
@@ -387,6 +389,8 @@
 							<configOptions>
 								<swaggerAnnotations>false</swaggerAnnotations>
 								<openApiNullable>false</openApiNullable>
+								<useJakartaEe>true</useJakartaEe>
+								<useSpringBoot3>true</useSpringBoot3>
 							</configOptions>
 							<modelPackage>it.pagopa.generated.notifications.v1.dto</modelPackage>
 							<apiPackage>it.pagopa.generated.notifications.v1.api</apiPackage>
@@ -410,6 +414,8 @@
 								<swaggerAnnotations>false</swaggerAnnotations>
 								<openApiNullable>false</openApiNullable>
 								<useOneOfInterfaces>true</useOneOfInterfaces>
+								<useJakartaEe>true</useJakartaEe>
+								<useSpringBoot3>true</useSpringBoot3>
 							</configOptions>
 							<modelPackage>it.pagopa.generated.transactionauthrequests.v2.dto</modelPackage>
 							<apiPackage>it.pagopa.generated.transactionauthrequests.v2.api</apiPackage>
@@ -439,6 +445,8 @@
 								<useSwaggerUI>false</useSwaggerUI>
 								<reactive>true</reactive>
 								<enumPropertyNaming>UPPERCASE</enumPropertyNaming>
+								<useJakartaEe>true</useJakartaEe>
+								<useSpringBoot3>true</useSpringBoot3>
 							</configOptions>
 						</configuration>
 					</execution>
@@ -458,6 +466,8 @@
 							<configOptions>
 								<swaggerAnnotations>false</swaggerAnnotations>
 								<openApiNullable>false</openApiNullable>
+								<useJakartaEe>true</useJakartaEe>
+								<useSpringBoot3>true</useSpringBoot3>
 							</configOptions>
 							<modelPackage>it.pagopa.generated.ecommerce.redirect.v1.dto</modelPackage>
 							<apiPackage>it.pagopa.generated.ecommerce.redirect.v1.api</apiPackage>
@@ -482,6 +492,8 @@
 								<openApiNullable>false</openApiNullable>
 								<useOneOfInterfaces>true</useOneOfInterfaces>
 								<legacyDiscriminatorBehavior>true</legacyDiscriminatorBehavior>
+								<useJakartaEe>true</useJakartaEe>
+								<useSpringBoot3>true</useSpringBoot3>
 							</configOptions>
 							<modelPackage>it.pagopa.generated.ecommerce.userstats.dto</modelPackage>
 							<apiPackage>it.pagopa.generated.ecommerce.userstats.api</apiPackage>
@@ -551,9 +563,8 @@
 					</execution>
 				</executions>
 				<configuration>
-					<source>17</source>
-					<target>17</target>
-					<compilerArgs>--enable-preview</compilerArgs>
+					<release>21</release>
+					<parameters>true</parameters>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -584,9 +595,9 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.1</version>
+				<version>3.2.5</version>
 				<configuration>
-					<argLine>${argLine} --enable-preview</argLine>
+					<argLine>@{argLine} -Xmx1024m</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
